--- a/server/src/main/resources/generator/biome/minecraft/mesa.yml
+++ b/server/src/main/resources/generator/biome/minecraft/mesa.yml
@@ -2,9 +2,79 @@ dict: "nukkitx:vanilla"
 
 elevationVanilla:
   height: 0.1
-  variation: 0.2
+  variation: 0.05
 
 temperature: 2.0
 rainfall: 0.0
 
-#porktodo: this
+decorators:
+  - id: "nukkitx:height"
+    seed: "mesa_surface"
+    threshold:
+      id: "nukkitx:simplex"
+      scale: 0.0045
+      octaves: 4
+    additionalOffset: 8.0
+    addSeaLevelToOffset: true
+    below:
+        # Plain old mesa surface
+      - id: "nukkitx:surface"
+        ground: "stone"
+        top: "sand#1" # red sand
+        fill: "stained_hardened_clay#1" # orange
+    above:
+        # Generate clay layers
+      - id: "nukkitx:mesa_surface"
+        bandOffset:
+          id: "nukkitx:simplex"
+          scale: 0.001953125 # 1/512
+          octaves: 4
+          factor: 2.0
+        ground: "stone"
+        base: "hardened_clay"
+        bands:
+          - count: 21
+            block: "stained_hardened_clay#1" # orange
+          - count: "2-5"
+            size: "1-3"
+            block: "stained_hardened_clay#4" # yellow
+          - count: "2-5"
+            size: "2-4"
+            block: "stained_hardened_clay#12" # brown
+          - count: "2-5"
+            size: "1-3"
+            block: "stained_hardened_clay#14" # red
+          - count: "3-5"
+            block: "stained_hardened_clay" # white
+            above: "stained_hardened_clay#8" # light gray
+            below: "stained_hardened_clay#8" # light gray
+
+populators:
+    # Dead bushes
+  - id: "nukkitx:shrub"
+    count: 20
+    on:
+      - "sand#1"
+      - "hardened_clay"
+      - "stained_hardened_clay" # white
+      - "stained_hardened_clay#1" # orange
+      - "stained_hardened_clay#4" # yellow
+      - "stained_hardened_clay#8" # light gray
+      - "stained_hardened_clay#12" # brown
+      - "stained_hardened_clay#14" # red
+    block: "deadbush"
+
+    # Cactus
+  - id: "nukkitx:plant"
+    count: 5
+    height: "1-3"
+    on: "sand#1"
+    block: "cactus"
+
+    # Sugar cane
+  - id: "nukkitx:plant"
+    count: 3
+    height: "1-3"
+    on: "sand,sand#1"
+    water: "water"
+    block: "reeds"
