--- a/server/src/main/resources/generator/biome/minecraft/mesa_plateau.yml
+++ b/server/src/main/resources/generator/biome/minecraft/mesa_plateau.yml
@@ -1,10 +1,62 @@
 dict: "nukkitx:vanilla"
+parent: "minecraft:mesa"
 
 elevationVanilla:
-  height: 1.5
+  height: 1.525
   variation: 0.025
 
-temperature: 2.0
-rainfall: 0.0
+decorators:
+  - id: "nukkitx:next"
 
-#porktodo: this
+  - id: "nukkitx:noise"
+    selector:
+      id: "nukkitx:simplex"
+      scale: 0.015625
+      octaves: 4
+    threshold: 0.0
+    above:
+      - id: "nukkitx:noise"
+        selector:
+          id: "nukkitx:simplex"
+          scale: 0.0045
+          octaves: 4
+        threshold: 0.0
+        above:
+          - id: "nukkitx:replace_top"
+            height: "86-255"
+            replace:
+              - "hardened_clay"
+              - "stained_hardened_clay" # white
+              - "stained_hardened_clay#1" # orange
+              - "stained_hardened_clay#4" # yellow
+              - "stained_hardened_clay#8" # light gray
+              - "stained_hardened_clay#12" # brown
+              - "stained_hardened_clay#14" # red
+            with: "grass"
+        below:
+          - id: "nukkitx:replace_top"
+            height: "86-255"
+            replace:
+              - "hardened_clay"
+              - "stained_hardened_clay" # white
+              - "stained_hardened_clay#1" # orange
+              - "stained_hardened_clay#4" # yellow
+              - "stained_hardened_clay#8" # light gray
+              - "stained_hardened_clay#12" # brown
+              - "stained_hardened_clay#14" # red
+            with: "dirt#1" # coarse dirt
+
+    # Tall grass
+  - id: "nukkitx:scattered_cover"
+    chance: 0.05
+    on: "grass,dirt#1"
+    block: "tallgrass"
+
+populators:
+  - id: "nukkitx:next"
+
+    # Trees
+  - id: "nukkitx:tree"
+    chance: 0.01953125 # about 5 per chunk
+    on: "grass,dirt#1"
+    type: "oak"
