add all biomes to overworld biome selector and finalize overworld preset

--- a/server/src/main/resources/generator/biome/minecraft/sunflower_plains.yml
+++ b/server/src/main/resources/generator/biome/minecraft/sunflower_plains.yml
@@ -1,7 +1,7 @@
 dict: "nukkitx:vanilla"
 parent: "minecraft:plains"
 
-decorators:
+populators:
     # Sunflower
   - id: "nukkitx:double_plant"
     count: 10
