--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -6,9 +6,9 @@ groundBlock: "stone"
 seaBlock: "water"
 seaLevel: 63
 
-biomes: "nukkitx:flat" #todo: reset this to overworld when i'm done testing
+biomes: "nukkitx:overworld"
 
-density: "nukkitx:default"
+density: "nukkitx:overworld"
 
 decorators:
   - id: "nukkitx:next"
