--- a/server/src/main/resources/generator/biomemap/nukkitx/flat.yml
+++ b/server/src/main/resources/generator/biomemap/nukkitx/flat.yml
@@ -1,16 +1,2 @@
-#id: "nukkitx:constant"
-#biome: "minecraft:mesa"
-
-id: "nukkitx:complex"
-fallback: "minecraft:ocean"
-root:
-  id: "nukkitx:zoom"
-  times: 5
-  next:
-    id: "nukkitx:zoom"
-    mode: "fuzzy"
-    next:
-      id: "nukkitx:random"
-      biomes:
-        - "minecraft:mesa"
-        - "minecraft:mesa_plateau"
+id: "nukkitx:constant"
+biome: "minecraft:plains"
