add fallen trees

--- a/server/src/main/resources/generator/biome/minecraft/birch_forest.yml
+++ b/server/src/main/resources/generator/biome/minecraft/birch_forest.yml
@@ -5,6 +5,15 @@ temperature: 0.6
 rainfall: 0.6
 
 populators:
+    # Fallen trees
+  - id: "nukkitx:tree"
+    chance: 0.0005580357 # about 1 per 7 chunks
+    on: "grass"
+    replace: "air,tallgrass"
+    type:
+      species: "birch"
+      fallen: true
+
     # Trees
   - id: "nukkitx:tree"
     chance: 0.0390625 # about 10 per chunk
