--- a/server/src/main/resources/generator/biome/minecraft/jungle.yml
+++ b/server/src/main/resources/generator/biome/minecraft/jungle.yml
@@ -14,6 +14,14 @@ decorators:
     fill: "dirt"
 
 populators:
+    # Fallen trees
+  - id: "nukkitx:tree"
+    chance: 0.0005580357 # about 1 per 7 chunks
+    on: "grass"
+    type:
+      species: "jungle"
+      fallen: true
+
     # Trees
   - id: "nukkitx:tree"
     chance: 0.015625 # about 4 per chunk
