make populators be per-block rather than per-chunk (part 2)

--- a/server/src/main/resources/generator/biome/minecraft/beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/beach.yml
@@ -21,7 +21,7 @@ populators:
 
     # Sugar cane
   - id: "nukkitx:plant"
-    count: 10
+    chance: 0.0390625 # about 10 per chunk
     height: "1-3"
     block: "reeds"
     on: "sand"
