--- a/server/src/main/resources/generator/biome/minecraft/redwood_taiga_mutated.yml
+++ b/server/src/main/resources/generator/biome/minecraft/redwood_taiga_mutated.yml
@@ -7,7 +7,7 @@ rainfall: 0.8
 populators:
     # Mossy cobblestone blobs
   - id: "nukkitx:blob"
-    count: "0-2"
+    chance: 0.00390625 # about 1 per chunk
     radius: "0-1"
     on: "grass,podzol,dirt#1"
     replace: "air,grass,podzol,dirt,dirt#1,water"
@@ -43,7 +43,7 @@ populators:
 
     # Berry bushes and dead bushes
   - id: "nukkitx:shrub"
-    count: 5
+    chance: 0.01953125 # about 5 per chunk
     on: "grass,podzol,dirt#1"
     block:
       - "sweet_berry_bush"
