--- a/server/src/main/resources/generator/biome/minecraft/flower_forest.yml
+++ b/server/src/main/resources/generator/biome/minecraft/flower_forest.yml
@@ -27,7 +27,7 @@ populators:
     # Flowers
     # This doesn't use the "flower gradient" thing like vanilla, but instead simply distributes them randomly
   - id: "nukkitx:shrub"
-    count: 100
+    chance: 0.390625 # about 100 per chunk
     on: "grass"
     replace: "air,tallgrass"
     block:
@@ -45,7 +45,7 @@ populators:
 
     # Double plants
   - id: "nukkitx:double_plant"
-    count: 3
+    chance: 0.01171875 # about 3 per chunk
     on: "grass"
     replace: "air,tallgrass"
     types:
