--- a/server/src/main/resources/generator/biome/minecraft/plains.yml
+++ b/server/src/main/resources/generator/biome/minecraft/plains.yml
@@ -29,13 +29,13 @@ populators:
     above:
         # Double tall grass
       - id: "nukkitx:double_plant"
-        count: 7
+        chance: 0.02734375 # about 7 per chunk
         on: "grass"
         type: 2
 
         # Flowers
       - id: "nukkitx:shrub"
-        count: 4
+        chance: 0.015625 # about 4 per chunk
         on: "grass"
         replace: "air,tallgrass"
         blocks:
@@ -49,7 +49,7 @@ populators:
     below:
         # Flowers
       - id: "nukkitx:shrub"
-        count: 15
+        chance: 0.05859375 # about 15 per chunk
         on: "grass"
         replace: "air,tallgrass"
         blocks:
