--- a/server/src/main/resources/generator/preset/minecraft/nether.yml
+++ b/server/src/main/resources/generator/preset/minecraft/nether.yml
@@ -13,5 +13,18 @@ density: "minecraft:nether"
 decorators:
   - id: "nukkitx:next"
 
+    # Floor bedrock
+  - id: "nukkitx:bedrock"
+    block: "bedrock"
+    base: 0
+    fade: 1-5
+
+    # Nether roof (also bedrock)
+  - id: "nukkitx:bedrock"
+    block: "bedrock"
+    base: 127
+    fade: 122-126
+    reverseFade: true
+
 populators:
   - id: "nukkitx:next"
