mostly finalize end terrain

--- a/server/src/main/resources/generator/density/minecraft/end.yml
+++ b/server/src/main/resources/generator/density/minecraft/end.yml
@@ -9,9 +9,9 @@ seed: "end"
 selectorNoise:
   id: "nukkitx:perlin"
   scale:
-    x: 0.01670927734375
-    y: 0.0041773193359375
-    z: 0.01670927734375
+    x: 0.008354638671875
+    y: 0.008354638671875
+    z: 0.008354638671875
   octaves: 8
   factor: 12.75
   offset: 0.5
@@ -19,7 +19,7 @@ lowNoise:
   id: "nukkitx:perlin"
   scale:
     x: 0.005221649169921875
-    y: 0.0026108245849609375
+    y: 0.005221649169921875
     z: 0.005221649169921875
   octaves: 16
   factor: 1.0
@@ -28,14 +28,14 @@ highNoise:
   id: "nukkitx:perlin"
   scale:
     x: 0.005221649169921875
-    y: 0.0026108245849609375
+    y: 0.005221649169921875
     z: 0.005221649169921875
   octaves: 16
   factor: 1.0
   offset: 0.0
 islands:
   radius: 12
-  centerIslandRadius: 100.0
+  islandRadius: 100.0
   outerIslandStartRadius: 1024.0
   outerIslandSeedThreshold: -0.8
   islandNoise:
@@ -46,5 +46,5 @@ islands:
     octaves: 1
     factor: 6.5
     offset: 15.5
-maxHeightCutoff: 112.0
-minHeightCutoff: 64.0
+maxHeightCutoff: 56.0
+minHeightCutoff: 32.0
