add water/lava lakes

--- a/server/src/main/resources/generator/biome/minecraft/frozen_river.yml
+++ b/server/src/main/resources/generator/biome/minecraft/frozen_river.yml
@@ -4,7 +4,7 @@ parent: "minecraft:river"
 temperature: 0.0
 rainfall: 0.5
 
-decorators:
+populators:
   - id: "nukkitx:next"
 
     # Snow layer on ground
