--- a/server/src/main/resources/generator/biome/minecraft/cold_beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/cold_beach.yml
@@ -21,6 +21,9 @@ decorators:
     on: "grass"
     cover: "snow_layer"
 
+populators:
+  - id: "nukkitx:next"
+
     # Ice layer on water
   - id: "nukkitx:replace_top"
     replace: "water"
