--- a/server/src/main/resources/generator/biome/minecraft/frozen_ocean.yml
+++ b/server/src/main/resources/generator/biome/minecraft/frozen_ocean.yml
@@ -4,7 +4,7 @@ parent: "minecraft:ocean"
 temperature: 0.0
 rainfall: 0.5
 
-decorators:
+populators:
   - id: "nukkitx:next"
 
     # Ice layer on water
